[package]
name = "navidrome-blissrs"
version = "0.0.1"
edition = "2021"
description = "Navidrome plugin that periodically checks library performs audio analysis using bliss-rs"
authors = ["Stephan Wahlen"]
license = "Apache 2.0"

[lib]
crate-type = ["cdylib"]


[dependencies]
nd-pdk = { git = "https://github.com/navidrome/navidrome", branch = "new-plugins", subdir = "plugins/pdk/rust/nd-pdk" }
extism-pdk = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bliss-audio = { version = "0.11.2", default-features = false, features = ["library", "symphonia-all", "update-aubio-bindings"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "wav", "vorbis"] }